# Geolocation-Author-Automation

./: .gitignore  README.md  author_job.ipynb  geolocation_automations.py  geolocation_job.py  pyproject.toml  single_country_chunks.py  tox.ini
.github/workflows/: base.yml
steps/: multiple_countries.py  single_country_chunks.py
steps/author/: author_pipeline.py  author_preparation.py
steps/general/: hidratation_step.py
steps/geolocation/: geolocation_pipeline.py  geolocation_preparation.py
steps/utils/: telegram_live_notifications.py
