
[tool.poetry]
name = "python_template"
version = "0.1.0"
description = ""
authors = ["nodel <32603826+nodel@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
coverage = "^6.4.4"
pytest = "^7.1.2"
numpy="^1.23.0"
pandas = "^1.4.1"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"